[tool.poetry]
name = "prioritized-experience-replay"
version = "0.1.0"
description = ""
authors = ["Noah Farr <noah.farr@tno.nl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.1.0"
gymnasium = "^0.29.1"
tyro = "^0.8.8"
tensorboard = "^2.17.1"
stable-baselines3 = "^2.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
